# BetArxiv-Ingest

./: .gitignore  ingest.py  pyproject.toml
utils/: api_clients.py  db.py  migration_add_search_vector.sql  models.py  schema.sql  utils.py
