[project]
name = "betarxiv-ingest"
version = "0.1.0"
description = "PDF ingestion and processing system for academic papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "docling>=2.0.0",
    "google-genai>=0.8.0",
    "pypdf>=4.0.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
]
